# chatapp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json
.github/: copilot-instructions.md
chatserver/: CMakeLists.txt  CMakePresets.json  chatServerFactory.h  chatserver.cpp  chatserver.h  handleConnectionsLinux.cpp  handleConnectionsLinux.h  handleConnectionsWindows.cpp  handleConnectionsWindows.h  main.cpp  multThreadWebServer.cpp  multThreadWebServer.h  startserver.cpp  startserver.h
clientTest/: CMakeLists.txt  clientTest.cpp
clientsocket/: .gitignore  .gitignore_old  CMakeLists.txt  CMakeLists_new.txt  CMakePresets.json  LICENSE  README.md  clientSocket.cpp  clientSocket.h  clientSocket_new.cpp  clientSocket_new.h  main.cpp  main_new.cpp
epolTest/: CMakeLists.txt  epol.cpp
iocpCompletition/: CMakeLists.txt  iocpCompletition.cpp
iocpTest/: CMakeLists.txt  iocp.cpp
log/: send_messages.txt
temp/: CMakeLists.txt  chatServer_copy.cpp  chatServer_copy.h  clientSocket.cpp  clientSocket.h  handleConnectionsWindows_ copy.h  handleConnectionsWindows_copy.cpp  main.cpp
utils/: CMakeLists.txt  Command.ps1  file.cpp  file.h  functionWrapper.cpp  functionWrapper.h  logger.cpp  logger.h  outputStream.cpp  outputStream.h  scriptRunClientSocket.ps1  scriptRunClientSocket.txt  threadPool.cpp  threadPool.h  threadSafeQueue.h  util.cpp  util.h
